--- a/core/templates/authenticated/utils/help_text.html
+++ b/core/templates/authenticated/utils/help_text.html
@@ -1,3 +1,5 @@
 {% if field.help_text %}
+    {% block help_text_content %}
     <span class="help_text">{{ field.help_text }}</span>
+    {% endblock help_text_content %}
 {% endif %}
