--- a/core/templates/authenticated/question/help_text.html
+++ b/core/templates/authenticated/question/help_text.html
@@ -1,3 +1,5 @@
-{% if field.help_text %}
+{% extends 'authenticated/utils/help_text.html' %}
+
+{% block help_text_content %}
     <span class="help_text help_tip"><div class="help_tip_container">{{ field.help_text }}</div></span>
-{% endif %}
+{% endblock help_text_content %}
