--- a/core/templates/authenticated/utils/form_field.html
+++ b/core/templates/authenticated/utils/form_field.html
@@ -1,10 +1,10 @@
 <div class="field_wrapper">
     {{ field.label_tag }}
     {% block field %}
-    {{ field }}
+        {{ field }}
     {% endblock field %}
     {% block help_text %}
     {% include 'authenticated/utils/help_text.html' with field=field only %}
-    {% endblock %}
+    {% endblock help_text %}
     {{ field.errors }}
 </div>
