--- a/core/templates/authenticated/announcement.html
+++ b/core/templates/authenticated/announcement.html
@@ -1,4 +1,13 @@
 {% extends "authenticated/base.html" %}
+{% load staticfiles %}
+
+{% block authenticated_body_css %}
+<link rel="stylesheet" href="{% static "css/annoucement.css" %}" type="text/css"/>
+{% endblock authenticated_body_css %}
+
 {% block authenticated_body %}
-    {% include 'authenticated/widgets/simple_form.html' with form=vm.authenticated_body.form csrf_token=csrf_token only %}
+    <h5 class="well col-md-10 topheader header5">Set Annoucement</h5><br></br>
+    <div id="annoucement_form" class='row'>
+        {% include 'authenticated/utils/simple_form.html' with form=vm.authenticated_body.form csrf_token=csrf_token only %}
+    </div>
 {% endblock authenticated_body %}
