--- a/core/templates/authenticated/sidebar/userinfo.html
+++ b/core/templates/authenticated/sidebar/userinfo.html
@@ -1,4 +1,4 @@
-<h6 class='sidebarheader header6'> Personal Info </h6>
+<h6 class='sidebarheader header6'> User Info </h6>
 <div class="userinfo_element">{{ userinfo.name }}</div>
 <div class="userinfo_element">{{ userinfo.user_school }}</div>
 <div id='user_id' class='invisible userinfo_element'>{{ userinfo.user_id }}</div>
