--- a/core/templates/authenticated/sidebar/base.html
+++ b/core/templates/authenticated/sidebar/base.html
@@ -4,10 +4,13 @@
 	        {% block userinfo %}
                 <div id="userinfo">
                     {% include "authenticated/sidebar/userinfo.html" with userinfo=sidebar.userinfo only %}
-                    {% block custom_userinfo %} {% endblock %}
+                    {% block custom_userinfo %} {% endblock custom_userinfo %}
                 </div>
             {% endblock userinfo %}
-            {% block sidebar_content %}{% endblock %}
+            {% block sidebar_content %}{% endblock sidebar_content %}
+            {% block sidebar_listings %}
+                {% include "authenticated/sidebar/listings.html" with listings=sidebar.listings only %}
+            {% endblock sidebar_listings %}
         </ul>
     <div id="emptyspace"></div>
     </div>
