--- a/core/templates/authenticated/sidebar/listings.html
+++ b/core/templates/authenticated/sidebar/listings.html
@@ -4,8 +4,10 @@
 		   	<h6 class="sidebarheader header6">{{ listing.title }}</h6>
 		    {% for element in listing.elements %}
 		        <div class="listing_element">
-		            <p><a href="{% url listing.urlname element.id %}">{{ element.label }}</a></p>
-		        </div>
+                    {% block sub_sidebar_listing_link %}
+                        <p>{% include 'authenticated/sidebar/listing_link.html' with urlname=listing.urlname element=element only %}</p>
+                    {% endblock sub_sidebar_listing_link %}
+                </div>
 		    {% endfor %}
 		</div>
 	{% endfor %}
