--- a/core/templates/authenticated/home/student.html
+++ b/core/templates/authenticated/home/student.html
@@ -13,13 +13,16 @@
         {% include "authenticated/widgets/student_performance.html" with name=vm.sidebar.userinfo.name only %}
         {% include "authenticated/widgets/printable_performance.html" with name=vm.sidebar.userinfo.name only %}
         {% include "authenticated/widgets/section_chart_popup.html" only %}
-    </div>    <!-- Assignment Div -->
-
-    <div class='row'>
-        {% include "authenticated/widgets/active_assignment.html" with active_assignments=vm.authenticated_body.active_assignments only %}
-        {% include "authenticated/widgets/graded_assignment.html" with graded_assignments=vm.authenticated_body.graded_assignments only %}
     </div>
+
 {% endblock home_body %}
+
+{% block assignments %}
+    <div class="row">
+        {% include "authenticated/widgets/active_assignments_student.html" with assignments=vm.authenticated_body.active_assignments table_id_suffix=vm.authenticated_body.username only %}
+        {% include "authenticated/widgets/corrected_assignments_student.html" with assignments=vm.authenticated_body.corrected_assignments only %}
+    </div>
+{% endblock assignments %}
 
 {% block home_js %}
     <script type="text/javascript" src="{% static "js/printbutton.js" %}"></script> 
