--- a/core/templates/authenticated/home/admin.html
+++ b/core/templates/authenticated/home/admin.html
@@ -12,3 +12,10 @@
         {% include "authenticated/widgets/teacher_listing.html" with teachers=vm.authenticated_body.teachers only %}
     </div>
 {% endblock home_body %}
+
+{% block assignments %}
+    <div class="row">
+        {% include "authenticated/widgets/uncorrected_assignments.html" with assignments=vm.authenticated_body.uncorrected_assignments only %}
+        {% include "authenticated/widgets/corrected_assignments_teacher.html" with assignments=vm.authenticated_body.corrected_assignments only %}
+    </div>
+{% endblock assignments %}
