--- a/core/templates/authenticated/home/base.html
+++ b/core/templates/authenticated/home/base.html
@@ -7,8 +7,11 @@
 {% endblock authenticated_body_css %}
 
 {% block authenticated_body %}
-    {% include "authenticated/widgets/announcement_box.html" with announcements=vm.authenticated_body.announcements only %}
+    {% block announcements %}
+        {% include "authenticated/widgets/announcements_table.html" with announcements=vm.authenticated_body.announcements only %}
+    {% endblock announcements %}
     {% block home_body %}{% endblock home_body %}
+    {% block assignments %}{% endblock assignments %}
     {% include "authenticated/widgets/toast.html" with messages=messages only %}
 {% endblock authenticated_body %}
 
