comments tended to

--- a/core/templates/authenticated/utils/parent_child_header.html
+++ b/core/templates/authenticated/utils/parent_child_header.html
@@ -1,4 +1,4 @@
 <div class='parent-child'>
-    <div class='userinfo_element'>{{ child_info.name }} </div>
-    <div class='userinfo_element'>{{ child_info.classroom }} </div>
+    <div class='userinfo_element'>{{ parent_child_elem.name }} </div>
+    <div class='userinfo_element'>{{ parent_child_elem.classroom }} </div>
 </div> 
