--- a/core/templates/password_reset/form.html
+++ b/core/templates/password_reset/form.html
@@ -4,7 +4,7 @@
 
 {% block css %}
     <link rel="stylesheet" href="{% static "css/password_strength.css" %}" type="text/css"/>
-    <link rel="stylesheet" href="{% static "css/email_reset.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/password_reset.css" %}" type="text/css"/>
 
 {% endblock css %}
 {% block body %}
