commits tended to

--- a/core/templates/authenticated/assignment.html
+++ b/core/templates/authenticated/assignment.html
@@ -10,7 +10,7 @@
 {% endblock authenticated_body_js %}
 
 {% block authenticated_body_css %}
-    <link rel="stylesheet" href="{% static "css/assignment_create.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/assignment.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "css/pickadate/classic.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "css/pickadate/classic.date.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "css/pickadate/classic.time.css" %}" type="text/css"/>
