--- a/core/templates/authenticated/assignment_id.html
+++ b/core/templates/authenticated/assignment_id.html
@@ -2,7 +2,7 @@
 {% load staticfiles %}
 
 {% block submission_id_css %}
-    <link rel="stylesheet" href="{% static "css/assignment_create.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/assignment.css" %}" type="text/css"/>
 {% endblock submission_id_css %}
 {% block assignment_header %}
  <h5 class="well col-md-10 topheader header5">Assignment Preview</h5><br></br>
