--- a/core/static/css/assignment.css
+++ b/core/static/css/assignment.css
@@ -1,4 +1,4 @@
-#create_assignment,#readonly_assignment_form,#aql_info{
+#create_assignment,#readonly_assignment_form,#aql_info,#assignment_info,#submission_info,#uncorrected_submission_form{
     margin-left: 215px;
 }
 
