--- a/core/templates/authenticated/submission_id/base.html
+++ b/core/templates/authenticated/submission_id/base.html
@@ -15,11 +15,14 @@
 {% block authenticated_body_css %}
     <link rel="stylesheet" href="{% static "css/submission_id.css" %}" type="text/css"/>
     <link rel="stylesheet" href="{% static "css/help_tip.css" %}" type="text/css"/>
+    <link rel="stylesheet" href="{% static "css/assignment.css" %}" type="text/css"/>
     {% block submission_id_css %}{% endblock submission_id_css %}
 {% endblock authenticated_body_css %}
 
 {% block authenticated_body %}
-    {% block assignment_header %} {% endblock assignment_header %}   
+    {% block assignment_header %} 
+        <h5 class="well col-md-10 topheader header5">Assignment - {{ vm.authenticated_body.aql_info.title }}</h5><br></br>
+    {% endblock assignment_header %}   
     <div class='row'>
         {% block assignment_info %}
             {% if vm.authenticated_body.assignment_info %}  {# assignment info may not exist for a preview #}
