--- a/core/templates/authenticated/subject_id/student.html
+++ b/core/templates/authenticated/subject_id/student.html
@@ -7,3 +7,10 @@
     {% include "authenticated/widgets/student_subjectroom_performance.html" only %}
 </div>
 {% endblock subjectroom_body %}
+
+{% block assignments %}
+    <div class="row">
+        {% include "authenticated/assignments_table/active_student.html" with assignments=vm.authenticated_body.active_assignments only %}
+        {% include "authenticated/assignments_table/corrected_student.html" with assignments=vm.authenticated_body.corrected_assignments only %}
+    </div>
+{% endblock assignments %}
