--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -28,7 +28,7 @@
             <div class="item active">
                 <div class='landingbox'>
                     <div class='landingtextmission landingtext'>
-                        <p class='mission'> Our aim at HWCentral is to streamline how Homework is assigned and corrected, by using a cloud-based web platform so as to reduce the teachers' workload. </br>
+                        <p class='mission'> Our aim at HWCentral iteachers' workload. </br>
                         <div class='indexbuttons'>
                             <a href="mailto:contact@hwcentral.in" ><button type='button' class='lead btn btn-success btn-lg'> Lets Get Started ! </button></a>
                         </div>
