updates to error pages

--- a/hwcentral/templates/404.html
+++ b/hwcentral/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Page not found (404){% endblock title %}
+{% block title %}Page not found{% endblock title %}
 
 {% block body %}
 
