--- a/hwcentral/templates/500.html
+++ b/hwcentral/templates/500.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}Server error (500){% endblock title %}
+{% block title %}Server Error{% endblock title %}
 
 {% block body %}
-    <h2>Server Error</h2>
+    <h2>Something went wrong :(</h2>
     <p>There&#39;s been an error. It has been reported to the site administrators and should be fixed shortly. Thanks
         for your patience.</p>
     <p>Return to <a href="{% url 'index' %}">Home</a></p>
