--- a/core/templates/forgot_password/mailed.html
+++ b/core/templates/forgot_password/mailed.html
@@ -5,4 +5,4 @@
     <p> If your entered email was registered with us, you will receive the instructions for password reset shortly. </p>
     <p> You should receive an email within the next 30 minutes. </p>
 </div>
-{% endblock %}
+{% endblock body %}
