--- a/core/templates/password_reset/complete.html
+++ b/core/templates/password_reset/complete.html
@@ -4,4 +4,4 @@
         <p> Your password has been updated.  You may go ahead and log in now.</p>
         <p><a href="{{ login_url }}">Go to Log in</a></p>
     </div>
-{% endblock %}
+{% endblock body %}
