--- a/hwcentral/templates/about.html
+++ b/hwcentral/templates/about.html
@@ -7,12 +7,12 @@
 
 {% block title %}
     About Us
-{% endblock %}
+{% endblock title %}
 
 {% block meta %}
     <meta name="description"
           content="Sidhant Pai&#39; Oasis Vali and Sharang Pai&#39; are the co-founders of HWCentral&#46; Together the HWCentral team brings to the table a first-hand understanding of the Indian education system&#39; a passion for technology&#39; entrepreneurship experience and web service development expertise"/>
-{% endblock %}
+{% endblock meta %}
 
 {% block body %}
     <h1 class="well">About Us</h1>
