--- a/hwcentral/templates/500.html
+++ b/hwcentral/templates/500.html
@@ -2,6 +2,12 @@
 
 {% block title %}Server Error{% endblock title %}
 
+{% block header %}
+    {# 500 page is a special page. even request.user is not available in context as we want to minimize db dependency #}
+    {# hence using barebones header #}
+    {% include 'header_base.html' only %}
+{% endblock header %}
+
 {% block body %}
     <h2>Something went wrong :(</h2>
     <p>There&#39;s been an error. It has been reported to the site administrators and should be fixed shortly. Thanks
