--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -1,12 +1,10 @@
-{# extends "base.html" #}
-
 {% load staticfiles %}
 
 
 
 {% block meta %}
     <meta name="description"
-          content="HomeWork Central HWCentral streamlines Homework for Indian Schools by using a cloud-based web platform to automate correction&#39; prevent plagiarism&#39; provide powerful analytics and reduce teachers workload&#46;"/>
+          content="HomeWork Central provides schools with an online platform for students to complete their homework. Large question banks an automatic correction provide teachers with more time to do what they love - teach."/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 {% endblock %}
 
