--- a/hwcentral/static/css/index.css
+++ b/hwcentral/static/css/index.css
@@ -71,7 +71,7 @@ background-color: rgba(0, 0, 0, 0.9); color:#fff; position:absolute; top:40px; r
 }
 
 #hwcentral1{
-    padding:40px; font-family: 'Comic Sans MS', sans-serif; font-size:30px;
+    padding:40px; padding-left:50px; font-family: 'Proxima Nova', sans-serif; font-size:30px;
 }
 
 #landing_top{
@@ -99,7 +99,7 @@ margin-top:5px; position:relative; overflow: hidden; max-height:850px;
 }
 
 #horizontaldiv4{
-background-image:url('textured.png'); margin-top:5px; position:relative; overflow: hidden; text-align:center; font-family: 'Proxima Nova', sans-serif; padding:40px; font-size:40px; color:#3B3131; font-weight:bold;
+background-image:url('textured.png'); margin-top:2px; position:relative; overflow: hidden; text-align:center; font-family: 'Proxima Nova', sans-serif; padding:40px; font-size:40px; color:#3B3131; font-weight:bold;
 }
 
 #horizontaldiv5{
@@ -135,11 +135,18 @@ color:#d2d2d2; margin-top:90px; margin-left:0px; height:300px; width:100%; posit
 }
 
 #submitbut{
-    color:#fff; background-color:#000; border:1px solid #000; padding-left:0px; padding-right: 0px;
+    color:#fff; width:415px; background-color:#000; border:1px solid #000; padding-left:0px; padding-right: 0px;
 }
 
+@media screen and (max-width: 1470px){
+        #hwcentral2{
+            top:0px;
+            right:0px;
+            height:100%;
+        }
+}
 
-@media screen and (max-width: 1500px){
+@media screen and (max-width: 1350px){
     #hwcentral2{
     width:100%; top:0px; right:0px; position:relative; font-size:20px; background-color: rgba(0, 0, 0, 0.8); padding:20px;
     }
@@ -286,6 +293,10 @@ color:#d2d2d2; margin-top:90px; margin-left:0px; height:300px; width:100%; posit
     width:250px;
     font-size: 24px;
     margin-top: 10px;
+    }
+
+    #submitbut{
+    width:260px;
     }
 
     #horizontaldiv5{
