--- a/hwcentral/templates/footer.html
+++ b/hwcentral/templates/footer.html
@@ -1,7 +1,7 @@
-<div class='navbar navbar-inverse navbar-static-bottom'>
+<div class='navbar navbar-inverse navbar-static-bottom' style="border-radius:0px; height:30px; padding-left:15px; padding-right:15px;">
     <p class='indented_body_right navbar-brand navbar-right'> &copy; HWCentral 2015 </p>
 
-    <ul class="nav navbar-nav footer">
+    <ul id="footcontact" class="nav navbar-nav footer">
         <li><a href="mailto:contact@hwcentral.in">Email : contact@hwcentral.in </a></li>
         <li><a href="tel:+919825047325">Phone: +91 9825047325 </a></li>
     </ul>
