--- a/hwcentral/templates/header_base.html
+++ b/hwcentral/templates/header_base.html
@@ -1,7 +1,6 @@
 <div class='navbar navbar-inverse navbar-fixed-top'>
-    <a class='navbar-brand banner' href="{% url 'index' %}">HW Central</a>
+    <a class='navbar-brand banner' href="{% url 'index' %}">Homework Central</a>
 
-    <p class='tagline navbar-brand'>Education for the New Generation.</p>
     {% block header_dynamic %}
     {% endblock header_dynamic %}
 </div>
