--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -10,12 +10,12 @@
 
 {% block body %}
 
-    
-
+<div style="position:relative;">
+    <img class='loginimage' src="{% static 'img/login.jpg' %}">
     <div class="logintext">
         <div class="logindiv">
-            <!--- Start Code for Log In -->
-            <h2> Log In to your HWCentral Account </h2>
+            <!--- Start Code for Log In ---->
+            <h2>LOG IN</h2>
         </br>
 
             <form method="post" action="{% url 'login' %}">
@@ -25,18 +25,17 @@
                     {% include "authenticated/widgets/form_field.html" with field=field only %}
                 {% endfor %}
                 <div class='loginbuttons'>
-                <input type="submit" class='btn btn-lg btn-default' value="Log In"/> 
+                <input type="submit" class='btn btn-lg btn-default' value="LOG IN"/> 
                 <input type="hidden" name="next" value="{{ next }}"/>
                 <a href=" {% url 'forgot_password' %}">Forgot your password?</a>
                 </div>
             </form>
 
-            
+            <br>
+            <a id="forgotpass" href=" {% url 'forgot_password' %}">Forgot your password?</a>
 
             <!--- End Code for Log In --> 
         </div>
     </div>
-    <div>
-    <img class='loginimage' src="{% static 'img/login.jpg' %}">
-    </div>
+</div>
 {% endblock body %}
