--- a/hwcentral/templates/index.html
+++ b/hwcentral/templates/index.html
@@ -104,13 +104,13 @@
                     <a href="#info">
                         <span id="learnmorebutton">
                             LEARN MORE 
-                            <img class="med-opacity" style="width:44px;" src="{% static 'img/index/landing/arrowdark.png' %}">
+                            <img class="med-opacity" style="width:36px; margin-left:5px;" src="{% static 'img/index/landing/arrowdark.png' %}">
                         </span>
                     </a>
                     <a href="{% url 'login' %}">
                         <span id="loginbutton">
                             LOG IN
-                            <img class="med-opacity rotate270" style="width:44px;" src="{% static 'img/index/landing/arrowdark.png' %}">
+                            <img class="med-opacity rotate270" style="width:32px;" src="{% static 'img/index/landing/arrowdark.png' %}">
                         </span>
                     </a>
                 </div>
